--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a6d5a6">  <td>24/07/13 13:58:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.classSetup()[pri:0, instance:framework.LoginTestClass@6ae5aa72]">&gt;&gt;classSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1770642014</td>   <td></td> </tr>
-<tr bgcolor="a6d5a6">  <td>24/07/13 13:58:49</td>   <td>3284</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.classTeardown()[pri:0, instance:framework.LoginTestClass@6ae5aa72]">&lt;&lt;classTeardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1770642014</td>   <td></td> </tr>
-<tr bgcolor="efed8d">  <td>24/07/13 13:58:48</td>   <td>2709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTestClass.loginTest()[pri:0, instance:framework.LoginTestClass@6ae5aa72]">loginTest</td> 
-  <td>main@1770642014</td>   <td></td> </tr>
-<tr bgcolor="a6d5a6">  <td>24/07/13 13:58:47</td>   <td>1668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.methodSetup()[pri:0, instance:framework.LoginTestClass@6ae5aa72]">&gt;&gt;methodSetup</td> 
-<td>&nbsp;</td>  <td>main@1770642014</td>   <td></td> </tr>
+<tr bgcolor="efed8d">  <td>24/07/23 16:07:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FlipkartScrollTest.scrollTillElement()[pri:0, instance:testng.FlipkartScrollTest@61862a7f]">scrollTillElement</td> 
+  <td>main@1010953501</td>   <td></td> </tr>
 </table>
